--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -233,11 +233,15 @@ html {
     margin-left: 10px;
 }
 .rentpace{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap:30px;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+    // grid-column-gap:30px;
+    @include clearfix;
 }
 .pace_box{
+    width: 23%;
+    margin-right: 2%;
+    float: left;
     position: relative;
 }
 .pace_pic{
@@ -259,7 +263,7 @@ html {
     bottom:-22px;
     left:50%;
     margin-left: -96px;
-    width: 75%;
+    width: 76%;
     background-color: $twt-blue;
     text-align: center;
     padding: 5px 20px;
@@ -297,13 +301,16 @@ html {
     }
 }
 .ento_item {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    @include clearfix;
 }
 
 .spotList {
     background-color: #0d2d72;
     padding: 46px 40px;
+    width: 16.6%;
+    float: left;
     a{
         &:hover{
             text-decoration: none;
@@ -323,33 +330,40 @@ html {
     }
 }
 .ul_skell{
-    -moz-transform:skewX(1deg) skewY(8deg);
-    -webkit-transform:skewX(1deg) skewY(8deg);
-    -o-transform:skewX(1deg) skewY(8deg);
-    -ms-transform:skewX(1deg) skewY(8deg);
-    transform: skewX(1deg) skewY(8deg);
+    -moz-transform:skewX(1deg) skewY(2deg);
+    -webkit-transform:skewX(1deg) skewY(2deg);
+    -o-transform:skewX(1deg) skewY(2deg);
+    -ms-transform:skewX(1deg) skewY(2deg);
+    transform: skewX(1deg) skewY(2deg);
     img{
         width: 80px;
     }
 }
 .ul_skell_right{
-    -moz-transform:skewX(0deg) skewY(-6deg);
-    -webkit-transform:skewX(0deg) skewY(-6deg);
-    -o-transform:skewX(0deg) skewY(-6deg);
-    -ms-transform:skewX(0deg) skewY(-6deg);
-    transform: skewX(0deg) skewY(-6deg);
+    -moz-transform:skewX(0deg) skewY(-4deg);
+    -webkit-transform:skewX(0deg) skewY(-4deg);
+    -o-transform:skewX(0deg) skewY(-4deg);
+    -ms-transform:skewX(0deg) skewY(-4deg);
+    transform: skewX(0deg) skewY(-4deg);
     img{
         width: 80px;
     }
 }
 .skell_right {
-    -webkit-clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
-    clip-path: polygon(0 10%, 100% 0, 100% 90%, 0 100%);
+    -moz-transform:skewX(0deg) skewY(-4deg);
+    -webkit-transform:skewX(0deg) skewY(-4deg);
+    -o-transform:skewX(0deg) skewY(-4deg);
+    -ms-transform:skewX(0deg) skewY(-4deg);
+    transform: skewX(0deg) skewY(-4deg);
+
 }
 
 .skell_left {
-    -webkit-clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
-    clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 90%);
+    -moz-transform:skewX(0deg) skewY(4deg);
+    -webkit-transform:skewX(0deg) skewY(4deg);
+    -o-transform:skewX(0deg) skewY(4deg);
+    -ms-transform:skewX(0deg) skewY(4deg);
+    transform: skewX(0deg) skewY(4deg);
 }
 
 .sk_blue01 {
@@ -466,11 +480,13 @@ html {
     color:$twt-blue-sfont;
 }
 .evnt_viewpic{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap:40px;
-    grid-row-gap:40px;
-    margin-bottom: 70px;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // grid-column-gap:40px;
+    // grid-row-gap:40px;
+    // margin-bottom: 70px;
+
+    @include clearfix;
     a {
         text-decoration: none;
         &:hover{
@@ -479,6 +495,10 @@ html {
     }
 }
 .evn_box{
+    width: 30%;
+    margin-right: 2%;
+    margin-bottom: 2%;
+    float: left;
     transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
     transition-delay: .1s;
     border-radius: 4px;
@@ -639,56 +659,33 @@ html {
     background-repeat: no-repeat;
     position: relative;
 }
-.tra_imfor{
 
 
-}
-.tra_blue{
-    position: absolute;
-    width:40%;
-    height: 244px;
-    background-color: #6ea5c4;
-    bottom:-30px;
-    left:0;
-    z-index: 10;
-    -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-}
-.tra_dryblue{
-    position: absolute;
-    width: 80%;
-    height: 244px;
-    background-color: #e2ebf2;
-    bottom:-2px;
-    right:0;
-    -webkit-clip-path: polygon(8% 0, 100% 0, 100% 100%, 0 100%);
-    clip-path: polygon(8% 0, 100% 0, 100% 100%, 0 100%);
-
-}
 .traffic_big_title{
-    position: absolute;
     font-size: 2.5em;
     font-weight: bolder;
-    top: -55px;
-    left:50%;
-    margin-left: -105px;
-    margin-bottom: 10px;
+    text-align: center;
+    margin-top: 4%;
+}
+
+.mrt_box{
+    background-image: url("../images/tra_bg.svg");
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    bottom:0;
+    height: 290px;
+    @include clearfix;
 }
 .tra_contin{
-    position: absolute;
-    bottom:40px;
-    z-index: 20;
-    left:50%;
-    margin-left: -600px;
-}
-.mrt_box{
     width: 1200px;
-    text-align: center;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-
+    margin: 0 auto;
 }
 .ubike_btn{
+    width: 16%;
+    float: left;
+    text-align: center;
     ul{
         display: inline-block;
         margin-right: 30px;
@@ -817,14 +814,15 @@ html {
     width: 120px;
 }
 .side_fastbtn{
-    display: grid;
-    grid-template-columns:35% 65%;
-    grid-row-gap:2px;
+
+    @include clearfix;
 }
 .fast_icon{
     padding: 8px;
     background-color: $twt-blue;
     text-align: center;
+    width: 45px;
+    float: left;
     img{
         width: 30px;
     }
@@ -834,11 +832,28 @@ html {
         color: #ffffff;
     }
 }
-
+.fik_test{
+    float: left;
+    padding: 12px 14px;
+}
+.bebe_wrip{
+    overflow: hidden;
+}
+.bebe{
+    width: 16%;
+    float: left;
+    img{
+        width: 100%;
+    }
+}
 .fast_font{
     background-color: #f2f2f2;
-    padding:12px 10px;
-
+    width: 140px;
+    overflow: hidden;
+    margin-bottom: 2px;
+}
+.hide_fast{
+    margin-left: 76px;
 }
 .footer_faq{
     text-align: center;
