--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -495,9 +495,8 @@ html {
     }
 }
 .evn_box{
-    width: 30%;
-    margin-right: 2%;
-    margin-bottom: 2%;
+    width: 29.333%;
+    margin: 2% 2%;
     float: left;
     transition: box-shadow .3s ease-out, transform .3s ease-out, opacity .2s ease-out;
     transition-delay: .1s;
@@ -834,7 +833,7 @@ html {
 }
 .fik_test{
     float: left;
-    padding: 12px 14px;
+    padding: 12px 9px;
 }
 .bebe_wrip{
     overflow: hidden;
@@ -848,7 +847,7 @@ html {
 }
 .fast_font{
     background-color: #f2f2f2;
-    width: 140px;
+    width: 120px;
     overflow: hidden;
     margin-bottom: 2px;
 }
