--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -226,11 +226,14 @@ html {
     }
 }
 .oranizers{
-    -webkit-writing-mode: vertical-rl;
-	writing-mode: vertical-rl;
-    letter-spacing: 3px;
+    margin-top: 5%;
+        -webkit-transform: rotate(-90deg) translateX(0%);
+        transform: rotate(-90deg) translateX(0%);
+        -webkit-transform-origin: left top;
+        transform-origin: left top;
     color: #ffffff;
     margin-left: 10px;
+    letter-spacing: .3em;
 }
 .rentpace{
     // display: grid;
