--- a/css/main.css
+++ b/css/main.css
@@ -330,6 +330,10 @@ html {
   float: left;
 }
 
+.lili_box {
+  margin: 10%;
+}
+
 .chun_logo {
   width: 30%;
   float: left;
@@ -1614,15 +1618,18 @@ html {
 }
 
 .pace_bok {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  grid-row-gap: 50px;
+  margin-bottom: 40px;
 }
-
-.pace_bok2 {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-row-gap: 50px;
+.pace_bok {
+  zoom: 1;
+}
+.pace_bok:after {
+  content: ".";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
 }
 
 .bok_title {
@@ -1636,6 +1643,28 @@ html {
   color: #727272;
 }
 
+.lili_pic01 {
+  background-image: url("../images/biew.jpg");
+}
+
+.lili_pic02 {
+  background-image: url("../images/biew1.jpg");
+}
+
+.lili_pic03 {
+  background-image: url("../images/biew2.jpg");
+}
+
+.lili_pic04 {
+  background-image: url("../images/biew3.jpg");
+}
+
+.bok-pic {
+  width: 70%;
+  float: left;
+  background-size: cover;
+  height: 430px;
+}
 .bok-pic img {
   width: 100%;
   margin-bottom: 50px;
@@ -1647,8 +1676,23 @@ html {
   text-decoration: none;
 }
 
+.bok-pic00 {
+  width: 30%;
+  float: left;
+}
+.bok-pic00 img {
+  width: 100%;
+  margin-bottom: 50px;
+}
+.bok-pic00 a {
+  text-decoration: none;
+}
+.bok-pic00 a:hover {
+  text-decoration: none;
+}
+
 .bok_rp {
-  padding: 24%;
+  height: 430px;
   text-align: center;
   overflow: hidden;
   background-image: url("../images/bew.svg");
