--- a/css/main.css
+++ b/css/main.css
@@ -2578,8 +2578,8 @@ html {
 }
 
 .calen-card-box {
-  width: 30%;
-  margin: 0 2% 2% 0;
+  width: 29.333%;
+  margin: 2% 2%;
   float: left;
   border-radius: 10px;
   overflow: hidden;
