--- a/sass/twtcnangangcss/_calendar.scss
+++ b/sass/twtcnangangcss/_calendar.scss
@@ -5,8 +5,8 @@
     @include clearfix;
 }
 .calen-card-box{
-    width: 30%;
-    margin: 0 2% 2% 0;
+    width: 29.333%;
+    margin:2% 2%;
     float: left;
     border-radius: 10px;
     overflow: hidden;
