--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,7 @@
 @import "twtcnangangcss/_touch_about.scss";
 @import "twtcnangangcss/_event.scss";
 @import "twtcnangangcss/_sitemap.scss";
+@import "twtcnangangcss/_touch_sitemap.scss";
 @import "twtcnangangcss/_conference_room.scss";
 @import "twtcnangangcss/_touch_conference_room.scss";
 @import "twtcnangangcss/_transportation.scss";
