--- a/sass/twtcnangangcss/_conference_room.scss
+++ b/sass/twtcnangangcss/_conference_room.scss
@@ -1,11 +1,12 @@
 .confer_room{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap: 30px;
-    margin-bottom: 30px;
+    @include clearfix;
+    margin-bottom: 40px;
 }
 .room_sc{
     border: 1px solid #cccccc;
+    width: 25%;
+    float: left;
+    height: 400px;
 }
 .room_graybg{
     background-color: #f2f2f2;
@@ -118,13 +119,12 @@
     font-weight: bolder;
 }
 .meetingfloor{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-column-gap:100px;
-    margin-bottom: 50px;
+    @include clearfix;
+    margin-bottom: 40px;
 }
 .meeting_bg{
-
+    width: 33.3%;
+    float: left;
 }
 .meet_bluebg{
     width: 200px;
