--- a/css/main.css
+++ b/css/main.css
@@ -290,8 +290,10 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50acf3', endColorstr='#5ebcc7',GradientType=0 );
   /* IE6-9 */
   width: 80%;
-  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+  -webkit-transform: skewX(-12deg);
+  transform: skewX(-12deg);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 100% 0;
   height: 690px;
 }
 
@@ -1555,11 +1557,10 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50acf3', endColorstr='#5ebcc7',GradientType=0 );
   /* IE6-9 */
   width: 40%;
-  -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -moz-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -o-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  -ms-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-  clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+  -webkit-transform: skewX(-12deg);
+  transform: skewX(-12deg);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 100% 0;
   height: 350px;
   overflow: hidden;
 }
@@ -1574,6 +1575,10 @@ html {
   top: 177px;
   left: 111px;
   padding-right: 100px;
+  -webkit-transform: skewX(11deg);
+  transform: skewX(11deg);
+  -webkit-transform-origin: 100% 0;
+  transform-origin: 100% 0;
 }
 
 .page_headtitle {
