--- a/sass/twtcnangangcss/_twtcnangang.scss
+++ b/sass/twtcnangangcss/_twtcnangang.scss
@@ -203,8 +203,12 @@ html {
     background: linear-gradient(to bottom, #50acf3 0%,#5ebcc7 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#50acf3', endColorstr='#5ebcc7',GradientType=0 ); /* IE6-9 */
     width: 80%;
-    -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    // -webkit-clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    // clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
+    -webkit-transform: skewX(-12deg);
+    transform: skewX(-12deg);
+    -webkit-transform-origin: 100% 0;
+    transform-origin: 100% 0;
     height: 690px;
 
 }
