--- a/css/main.css
+++ b/css/main.css
@@ -2034,7 +2034,7 @@ html {
 }
 
 .stepblue {
-  width: 25%;
+  width: 23%;
   float: left;
   margin-right: 20px;
   padding: 20px;
@@ -2985,16 +2985,29 @@ html {
 }
 
 .link_box {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 30px;
-  grid-row-gap: 30px;
-  width: 100%;
+  zoom: 1;
+}
+.link_box:after {
+  content: ".";
+  display: block;
+  clear: both;
+  height: 0;
+  overflow: hidden;
+  visibility: hidden;
+}
+
+.link_wrap {
+  width: 21%;
+  margin: 2%;
+  float: left;
 }
 
 .link_pic {
+  height: 100px;
   border: 1px solid #ccc;
   margin-bottom: 10px;
+  overflow: hidden;
+  background-size: cover;
 }
 .link_pic img {
   width: 100%;
