--- a/sass/twtcnangangcss/_visitors.scss
+++ b/sass/twtcnangangcss/_visitors.scss
@@ -82,19 +82,27 @@
     }
 }
 .link_box{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-column-gap:30px;
-    grid-row-gap:30px;
-    width: 100%;
+    // display: grid;
+    // grid-template-columns: 1fr 1fr 1fr 1fr;
+    // grid-column-gap:30px;
+    // grid-row-gap:30px;
+    // width: 100%;
+    @include clearfix;
+}
+.link_wrap{
+    width: 21%;
+    margin: 2%;
+    float: left;
 }
 .link_pic{
+    height: 100px;
     border: 1px solid #ccc;
     margin-bottom: 10px;
-    // height: 100px;
-    // overflow: hidden;
+    overflow: hidden;
+    background-size: cover;
     img{
         width: 100%;
+
     }
 }
 .link_font{
